--- a/Bytes/app/src/main/res/layout/activity_history.xml
+++ b/Bytes/app/src/main/res/layout/activity_history.xml
@@ -5,5 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".profile.HistoryActivity">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="history page"
+        android:textSize="50dp"
+        tools:ignore="MissingConstraints"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
