--- a/Bytes/app/src/main/res/layout/activity_search.xml
+++ b/Bytes/app/src/main/res/layout/activity_search.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:hint="Search videos"
         android:inputType="text"
+        android:paddingLeft="15dp"
         app:layout_constraintEnd_toStartOf="@id/searchButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" /> <!-- Changed constraints to end before the button -->
