--- a/Bytes/app/src/main/res/layout/activity_signup.xml
+++ b/Bytes/app/src/main/res/layout/activity_signup.xml
@@ -108,7 +108,7 @@
             android:textStyle="bold"
             android:background="@drawable/edittext"
             android:inputType="textEmailAddress"
-            android:hint="Enter Your Email"
+            android:hint="abc@mail.com"
             android:textSize="16sp"
             android:layout_marginTop="15dp"/>
 
@@ -136,7 +136,8 @@
             android:inputType="textPassword"
             android:hint="Enter Your Password"
             android:textSize="16sp"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp"
+            android:drawableEnd="@drawable/info" />
 
         <TextView
             android:layout_width="match_parent"
