--- a/Bytes/app/src/main/res/layout/fragment_add.xml
+++ b/Bytes/app/src/main/res/layout/fragment_add.xml
@@ -83,10 +83,14 @@
                 android:background="@drawable/edittext"
                 android:ems="10"
                 android:textStyle="bold"
-                android:inputType="textPersonName"
                 android:padding="8dp"
                 android:textColor="#a2a4b5"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:inputType="textMultiLine"
+                android:gravity="top"
+                android:minLines="3"
+                android:maxLines="6"
+                android:scrollbars="vertical"/>
 
             <EditText
                 android:id="@+id/latitude"
